--- a/urban-octo-telegram-main/Develop/assets/css/style.css
+++ b/urban-octo-telegram-main/Develop/assets/css/style.css
@@ -23,7 +23,7 @@ header h1 {
 header h1 .seo {
     color: #d9dcd6;
 }
-
+/* When the user clicks a link in the navigation bar it should take them to the corresponding section */
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -49,7 +49,7 @@ a {
 p {
     font-size: 16px;
 }
-
+/* This is the main image on the webpage*/
 .hero {
     height: 800px;
     width: 100%;
@@ -68,11 +68,29 @@ p {
     float: right;
     margin-left: 25px;
 }
-
+/* The main element should get these properties*/
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+}
+
+section {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+/* If the picture does not load, a description of the picture should be in its place*/
+section img {
+    max-height: 200px;
+}
+
+section h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 .benefits {
@@ -85,7 +103,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* Should be on the right side of the webpage*/
 div {
     margin-bottom: 32px;
     color: #ffffff;
@@ -100,24 +118,6 @@ div img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-section {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-section img {
-    max-height: 200px;
-}
-
-section h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 footer {
